# Integration-Engineer-Test-2024

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: homework.md  project_rules.md  running_dev_container.md
rover/: requirements.txt
rover/configs/: cyclone_configuration.xml  env_vars.sh  nodes_launch.sh  rover.launch.py
rover/ros2/src/fail_detection_cpp/: CMakeLists.txt  package.xml
rover/ros2/src/fail_detection_cpp/include/fail_detection_cpp/: fail_detection.hpp
rover/ros2/src/fail_detection_cpp/src/: fail_detection.cpp  fail_detection_node.cpp
rover/ros2/src/fail_detection_py/: package.xml  setup.cfg  setup.py
rover/ros2/src/fail_detection_py/fail_detection_py/: fail_detection_node.py
rover/ros2/src/usr_msgs/: CMakeLists.txt  README.md  package.xml
rover/ros2/src/usr_msgs/msg/fail_detection/: Fail.msg  Fails.msg
rover/ros2/src/utils/: CMakeLists.txt  package.xml
rover/ros2/src/utils/include/utils/: console.hpp  string_utils.hpp
rover/ros2/src/utils/lib/: console.cpp  string_utils.cpp
scripts/: alias_script.sh  auto_format.sh  stack_build.sh  startRobotics.sh  test_package.sh
